volexc/tests/ui/parse_missing_brace.out
Error: found end of input expected identifier, or '}'
   ╭─[ parse_missing_brace.vol:3:15 ]
   │
 3 │     bar: u32;
   │               │ 
   │               ╰─ Unexpected end of input
   │ 
   │ Note: Expected one of: identifier, '}'
───╯