volexc/tests/ui/parse_missing_brace.vol
// Missing closing brace
struct Foo {
    bar: u32;
